[project]
name = "xfeat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8, <3.11"
dependencies = [
    "gdown>=5.2.0",
    "kornia==0.7.2",
    "opencv-contrib-python-headless==4.10.0.84",
    "poselib>=2.0.4",
    "torch>=2.4.1",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xfeat"]
